--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "common-tags": "^1.8.0",
+    "global": "^4.4.0",
+    "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
