--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "parcel index.html"
   },
   "devDependencies": {
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
     "@material-ui/styles": "^4.9.10",
@@ -15,9 +16,9 @@
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-syntax-highlighter": "10.1.0",
     "common-tags": "^1.8.0",
     "global": "^4.4.0",
-    "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
