--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alvaroc1/present",
-  "version": "0.0.1-b",
+  "version": "0.0.1-c",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -13,6 +13,10 @@
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@material-ui/styles": "^4.9.10",
     "@types/common-tags": "^1.8.0",
