--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@alvaroc1/present",
-  "version": "0.0.1-c",
+  "version": "0.0.1-d",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build ./index.ts --global @alvaroc1/present"
   },
-  "types": "index.d.ts",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "npm": "^6.14.5",
     "parcel-bundler": "^1.12.4",
