--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@alvaroc1/present",
-  "version": "0.0.1-d",
+  "version": "0.0.1-e",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build ./index.ts --global @alvaroc1/present"
+    "build": "rm -rf ./lib && tsc"
   },
   "types": "dist/index.d.ts",
   "devDependencies": {
     "npm": "^6.14.5",
-    "parcel-bundler": "^1.12.4",
     "typescript": "^3.8.3"
   },
   "files": [
