--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alvaroc1/present",
-  "version": "0.0.1-e",
+  "version": "0.0.1-f",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
