--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alvaroc1/present",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "license": "MIT",
   "scripts": {
     "start": "ts-node -T fuse"
@@ -25,8 +25,8 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
-    "@alvaroc1/layout": "1.0.1",
-    "@material-ui/styles": "^4.9.10",
+    "@alvaroc1/layout": "1.0.3",
+    "@material-ui/styles": "4.11.3",
     "@types/common-tags": "^1.8.0",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
