--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alvaroc1/present",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "license": "MIT",
   "scripts": {
     "start": "ts-node -T fuse"
@@ -11,8 +11,12 @@
   },
   "typesVersions": {
     "*": {
-      "components/*": ["src/components/*"],
-      "ui/*": ["src/ui/*"]
+      "components/*": [
+        "src/components/*"
+      ],
+      "ui/*": [
+        "src/ui/*"
+      ]
     }
   },
   "main": "src/index.ts",
@@ -20,15 +24,16 @@
   "typings": "src/index.ts",
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "4.1.5",
     "fuse-box": "^4.0.1-next.4",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "4.1.5"
   },
   "dependencies": {
     "@alvaroc1/layout": "1.0.3",
     "@material-ui/styles": "4.11.3",
     "@types/common-tags": "^1.8.0",
     "@types/node": "^13.13.2",
+    "@types/qs": "^6.9.6",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-syntax-highlighter": "10.1.0",
